Details
-
Bug
-
Resolution: Fixed
-
P4: Low
-
5.0.2, 5.9.5, 5.11.1, 5.15.3
-
249fe4ba1 (dev), b29bfa7ca (6.8), 174e6b59e (6.7), 1bcce82ff (tqtc/lts-6.5), 4c6b79497 (tqtc/lts-6.2)
Description
When an item is snapped into place then it does not take account for the section header, meaning that you can end up with only part of the item visible because the section is obscuring it.
Attachments
Issue Links
- relates to
-
QTBUG-76362 ListView.snapMode doesn't work correctly with header item.
-
- Closed
-