ListView: take section size into account while snapping an item into place

In case the sections are displayed using ViewSection.CurrentLabelAtStart,
the section size should be taken into account while snapping the items.
This patch extends the fixup() method to perform such checks.
The drawback of this approach is that the position adjustment takes
some time (because of the animation) and happens after the scrolling is
finished.
A better solution would be to fix the scrolling process in such a way,
that no adjustment is needed during fixup.

Fixes: QTBUG-30768
Pick-to: 6.7 6.5 6.2
Change-Id: I31a1a3af55afe8be4e8d7980cbb163622e3283bc
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit 249fe4ba127e834a33950a045d06628187987f99)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>