tests/auto/quick/qquicklistview/tst_qquicklistview.cpp
@@ -171,6 +171,7 @@ private slots:
     void headerSnapToItem_data();
     void headerSnapToItem();
     void snapToItemWithSpacing_QTBUG_59852();
+    void snapToItemWithSectionAtStart();
     void snapOneItemResize_QTBUG_43555();
     void snapOneItem_data();
     void snapOneItem();
@@ -5394,6 +5395,27 @@ void tst_QQuickListView::snapToItemWithSpacing_QTBUG_59852()
     QCOMPARE(listView->contentY(), 0); // it's farther to go to the next item, so snaps to the first
 
     releaseView(window);
+}
+
+void tst_QQuickListView::snapToItemWithSectionAtStart() // QTBUG-30768
+{
+    QQuickView window;
+    QVERIFY(QQuickTest::showView(window, testFileUrl("snapToItemWithSectionAtStart.qml")));
+    QQuickListView *listView = qobject_cast<QQuickListView *>(window.rootObject());
+    QTRY_VERIFY(listView);
+
+    // Both sections and elements are 30px high. The list height is 300px, so
+    // it fits exactly 10 elements. We can do some random flicks, but the
+    // content position always MUST be divisible by 30.
+    for (int i = 0; i < 10; ++i) {
+        const bool even = (i % 2 == 0);
+        const QPoint start = even ? QPoint(20, 100 + i * 5) : QPoint(20, 20 + i * 3);
+        const QPoint end = even ? start - QPoint(0, 50 + i * 10) : start + QPoint(0, 50 + i * 5);
+
+        flick(&window, start, end, 180);
+        QTRY_COMPARE(listView->isMoving(), false); // wait until it stops
+        QCOMPARE(int(listView->contentY()) % 30, 0);
+    }
 }
 
 static void drag_helper(QWindow *window, QPoint *startPos, const QPoint &delta)
